--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Change folder
         run: |
           pwd
-          mkdir oleksii
-          cd oleksii
+          cd ..
+          pwd
+          rm -d firstproj
           pwd
