--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,3 +44,5 @@ jobs:
           pwd
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
           pwd
+          cd firstproj
+          pwd
