--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,5 +43,4 @@ jobs:
         run: |
           git
           pwd
-          git --version
-          git clone https://github.com/Oleksii-GitRepere/firstproj.git
+          git clone ssh://github.com/Oleksii-GitRepere/firstproj.git
