--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,6 +46,6 @@ jobs:
         
       - name: Change folder
         run: |
-          git
           pwd
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
+          pwd
