--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -49,3 +49,4 @@ jobs:
           pwd
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
           pwd
+          cd firstproj
