--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -49,4 +49,7 @@ jobs:
           pwd
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
           pwd
-          cd firstproj
+          cd ..
+          cd ..
+          cd ..
+          pwd
