--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -49,7 +49,5 @@ jobs:
           pwd
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
           pwd
-          cd ..
-          cd ..
-          cd ..
+          cd firstproj
           pwd
