--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -50,4 +50,9 @@ jobs:
           git clone https://github.com/Oleksii-GitRepere/firstproj.git
           pwd
           cd firstproj
+          pwd
           ls
+      - name: Maven build
+        run: |
+            mvn compile
+            mvn package
