--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -62,3 +62,5 @@ jobs:
             cd target
             java -jar *.jar --server.port=8080
             cd ..
+      - name: Run curl
+        run: "curl -s 'http://localhost:8080/actuator/health'"
