--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -67,4 +67,7 @@ jobs:
       steps:
 
       - name: Run curl
-        run: "curl -s 'http://localhost:8080/actuator/health'"
+        run: |
+          apt update && sudo apt upgrade
+          apt install curl
+          curl --version
