--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -68,6 +68,6 @@ jobs:
 
       - name: Run curl
         run: |
-          apt update && sudo apt upgrade
-          apt install curl
+          sudo apt update && sudo apt upgrade
+          sudo apt install curl
           curl --version
