--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -74,12 +74,7 @@ jobs:
           mvn -v
       - name: Tomcat state
         run: |
-            TOMCAT_PID=$(ps -ef | awk '/[t]omcat/{print $2}')
-            echo TOMCAT PROCESSID $TOMCAT_PID
-            if [ -z "$TOMCAT_PID" ]
-            then
-            echo "TOMCAT NOT RUNNING"
-            sudo /opt/tomcat/bin/startup.sh
-            else
-            echo "TOMCAT RUNNING"
-            fi
+            sleep 180s
+            curl -s 'http://localhost:8080/actuator/health'
+
+      
