--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -75,6 +75,4 @@ jobs:
       - name: Tomcat state
         run: |
             sleep 120s
-            curl -s 'http://localhost:8080/actuator/health'
-
-      
+            curl localhost:8080/actuator/health
