--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
       - jenk
+  pull:
+      - main
+      - jenk
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
@@ -27,6 +30,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'zulu'
+
+      - name: Show Pull Message
+        run: "eho Pull message!!!"
 
       - name: Show Java version
         run: "java -version"
