Pull trigger message added

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,7 +4,9 @@ on:
     branches:
       - main
       - jenk
-  pull:
+  pull_request:
+    types:
+      - opened
     branches:
       - main
       - jenk
