--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,9 @@ jobs:
 
       steps:
 
+      - name: Push message
+        run: "echo First push message!"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
