--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 name: first_ci_cd
 on:
-  push:
+  pull_request:[opened, reopened]
     branches:
       - main
       - jenk
@@ -21,6 +21,9 @@ jobs:
       runs-on: ubuntu-latest
 
       steps:
+
+      - name: Show pull message
+        run: "echo First pull message!"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
